# kural

./: .env.example  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.dev.yml  docker-compose.yml
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements-clone.in  requirements-clone.txt  requirements-local-models.txt  requirements-supertonic.txt  requirements.txt
backend/app/: auth.py  config.py  consent.py  main.py  models.py  rate_limit.py  telemetry.py
backend/app/local_models/: __init__.py  asr.py  model_packs.py  registry.py  translation.py
backend/app/routers/: agent.py  clones.py  health.py  local_models.py  model_packs.py  runtime.py  setup.py  synthesize.py  telemetry.py  voices.py
backend/app/tts/: audio.py  chatterbox_engine.py  engine.py  pronunciation.py  registry.py  ssml.py  supertonic_engine.py
backend/app/tts/chatterbox_engine/: __init__.py  archive.py  storage.py  synthesis.py
backend/app/tts/ssml/: __init__.py  parser.py  stitch.py  types.py
backend/scripts/: download_models.py  provision_local_models.py
backend/tests/: conftest.py  test_agent_routes.py  test_audio_controls.py  test_clone_engine.py  test_clone_engine_integration.py  test_clone_routes.py  test_config_env.py  test_cors.py  test_download_models.py  test_engine_integration.py  test_local_models.py  test_model_packs.py  test_rate_limit_key.py  test_runtime_routes.py  test_ssml.py  test_supertonic_engine.py  test_synthesize_routes.py  test_tier2_guards.py  test_voice_metadata.py
cli/: README.md  pyproject.toml
cli/kural/: __init__.py  cli.py  client.py
cli/tests/: test_cli.py
desktop/: README.md  build-installer.ps1  build-installer.sh  build-release.ps1  build-release.sh  build.sh
desktop/scripts/: build_desktop.py  provision-backend-runtime.py  render-installer-config.py  render-release-config.py  smoke-release-artifacts.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: API.md  AUDIT_2026-06-19.md  BETA_RC1.md  GO_LIVE.md  LOCAL_MODELS.md  RELEASE.md  ROADMAP.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/app/: error.tsx  layout.tsx  page.tsx
frontend/app/components/: AgentPanel.tsx  AudioLibrary.tsx  ClonePanel.tsx  ControlPanel.tsx  DictationSettingsPanel.tsx  DubbingTimeline.tsx  FirstRunWizard.tsx  LocalModelPanel.tsx  ModelPackManager.tsx  PrivacySafetyPanel.tsx  ProjectVaultPanel.tsx  QualityStudio.tsx  ReleaseDiagnosticsPanel.tsx  ScriptStudio.tsx  SettingsView.tsx  SetupBanner.tsx  TtsEnginePanel.tsx  WorkspaceTabs.tsx
frontend/app/dictation/: page.tsx
frontend/app/hooks/: useApi.ts  useBackendStatus.ts  useWorkspace.ts
frontend/app/lib/: api.ts  audioLibrary.ts  clientUtils.ts  dictation.ts  dictationSettings.ts  dubbing.ts  performanceStyles.ts  types.ts  wav.ts  workspace.ts
frontend/tests/: clientUtils.test.ts  components.test.tsx  dictation.test.ts  dubbing.test.ts  kural.spec.ts  performanceStyles.test.ts  setup.ts  useApi.test.ts  workspace.test.ts  wsAuth.test.ts
mcp/: README.md  pyproject.toml
mcp/kural_mcp/: __init__.py  client.py  server.py
mcp/tests/: test_client.py  test_server.py
scripts/: rc1-release-gate.ps1  rc1_release_gate.py  start-local.ps1  start-local.sh
