[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kural-backend"
version = "0.2.0"
description = "FastAPI backend for the Kural TTS platform"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "soundfile>=0.12.1",
    "numpy>=2.0.2",
    "scipy>=1.13.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9,<1.0",
    "defusedxml>=0.7.1,<1.0",
    "kokoro-onnx==0.4.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]
# Voice cloning extras — installed via requirements-clone.txt + pinned
# torch / chatterbox-tts in the Dockerfile due to numpy compatibility
# constraints. Listed here for editable installs only.
clone = [
    "librosa==0.11.0",
    "s3tokenizer",
    # 4.46.x pairs with diffusers==0.29.0 + chatterbox-tts==0.1.7. Was 5.2.0,
    # an incompatible major that broke the clone-path install (see
    # requirements-clone.txt). Re-validate when bumping chatterbox-tts.
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth>=1.0.0",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "pyloudnorm",
    "omegaconf",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
