[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kural"
version = "0.2.0"
description = "Privacy-first text-to-speech CLI powered by Kural"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.28.1",
    "rich>=13",
]

[project.scripts]
kural = "kural.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kural*"]
