[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kural-mcp"
version = "0.2.0"
description = "Model Context Protocol server for the Kural TTS platform"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kural-mcp = "kural_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kural_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
