[package]
name = "kural-desktop"
version = "0.1.0"
edition = "2021"
description = "Kural TTS — privacy-first text-to-speech desktop app"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
