[package]
name = "kural-desktop"
version = "0.2.0"
edition = "2021"
description = "Kural TTS — privacy-first text-to-speech desktop app"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
